--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
     "express": "~4.14.1",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.2"
+    "moment": "^2.18.1",
+    "serve-favicon": "~2.3.2",
+    "phantom": "~4.0.2",
+    "request": "~2.81.0",
+    "request-promise": "~4.2.1",
+    "ws": "~3.0.0"
   }
 }
