--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "express": "~4.14.1",
     "hbs": "~4.0.1",
     "morgan": "~1.7.0",
-    "moment": "^2.18.1",
+    "moment": "~2.18.1",
     "serve-favicon": "~2.3.2",
     "phantom": "~4.0.2",
     "request": "~2.81.0",
