--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.1",
     "hbs": "~4.0.1",
     "moment": "~2.18.1",
+    "mongoose": "^4.13.5",
     "morgan": "~1.7.0",
     "phantom": "~4.0.2",
     "pinyin": "^2.8.3",
